<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.up2jakarta</groupId>
    <artifactId>up2-divers</artifactId>
    <version>1.4.8</version>
    <packaging>pom</packaging>

    <name>Up2Jakarta :: Divers</name>
    <description>Up2Jakarta POM Dependencies</description>
    <url>https://github.com/up2jakarta/up2-divers</url>

    <developers>
        <developer>
            <name>A.ABBESSI</name>
            <email>up2Abbessi[at]gmail.com</email>
            <roles>
                <role>Software engineer</role>
                <role>Technical Lead</role>
                <role>Application Architect</role>
            </roles>
            <url>https://up2jakarta.github.io/</url>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:git://github.com/up2jakarta/up2-divers.git</connection>
        <developerConnection>scm:git:ssh://github.com/up2jakarta/up2-divers.git</developerConnection>
        <url>https://github.com/up2jakarta/up2-divers.git</url>
    </scm>

    <modules>
        <module>up2xml-core</module>
        <module>up2csv-core</module>
        <module>up2job-core</module>
        <module>up2cii-format</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Spring Boot -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>3.4.7</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- CSV Dependencies -->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-csv</artifactId>
                <version>1.11.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>2.2.1</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.8.0</version>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <failOnWarnings>false</failOnWarnings>
                            <failOnError>false</failOnError>
                            <detectOfflineLinks>false</detectOfflineLinks>
                            <show>public</show>
                            <quiet>true</quiet>
                            <doclint>none</doclint>
                            <jdkToolchain>
                                <version>${java.version}</version>
                            </jdkToolchain>
                            <sourceFileExcludes>
                                <exclude>**/io/github/up2jakarta/csv/core/*Property.java</exclude>
                                <exclude>**/io/github/up2jakarta/csv/core/*Context.java</exclude>
                                <exclude>**/io/github/up2jakarta/csv/core/*Extension.java</exclude>
                            </sourceFileExcludes>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.5</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <!-- mvn decrypt:decrypt -Prelease (target/pass.txt) -->
                            <!-- gpg-connect-agent -v -->
                            <keyname>${gpg.key.name}</keyname>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>com.github.davidmoten</groupId>
                        <artifactId>decrypt-maven-plugin</artifactId>
                        <version>0.1.3</version>
                        <configuration>
                            <serverId>${gpg.key.name}</serverId>
                            <outputFile>${project.build.directory}/pass.txt</outputFile>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>0.5.0</version>
                        <extensions>true</extensions>
                        <configuration>
                            <publishingServerId>ossrh</publishingServerId>
                            <waitUntil>published</waitUntil>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

</project>
